force-app/main/default/objects/Customer_Type__c/Customer_Type__c.object-meta.xml
<CustomObject>
    <label>Customer Type</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Customer Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>