force-app/main/default/objects/Customer_Type__c/fields/CodeType__c.field-meta.xml
<CustomField>
    <fullName>CodeType__c</fullName>
    <label>Code Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CONSUMERS</fullName>
            </value>
            <value>
                <fullName>CUSTOMERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>