force-app/main/default/objects/Customer_Type__c/fields/CustomerConsumer__c.field-meta.xml
<CustomField>
    <fullName>CustomerConsumer__c</fullName>
    <formula>LEFT( TEXT(CodeType__c ) , 4)</formula>
    <label>CustomerConsumer</label>
    <type>Text</type>
</CustomField>