force-app/main/default/objects/Customer_Type__c/fields/Display_Description__c.field-meta.xml
<CustomField>
    <fullName>Display_Description__c</fullName>
    <formula>Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Description</label>
    <type>Text</type>
</CustomField>