force-app/main/default/objects/Customer_Type__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>Feed outbound only</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Display Order</label>
    <length>2</length>
    <type>Text</type>
</CustomField>