force-app/main/default/objects/Customer_Type__c/fields/TenantID__c.field-meta.xml
<CustomField>
    <fullName>TenantID__c</fullName>
    <formula>&apos;ALORICAALTRIA&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TenantID</label>
    <type>Text</type>
</CustomField>