force-app/main/default/objects/Customer_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CustomerConsumer__c</columns>
    <columns>IsActive__c</columns>
    <columns>CodeType__c</columns>
    <columns>Customer_Type__c</columns>
    <columns>Description__c</columns>
    <columns>Display_Description__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>FeedSend__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>